# zc_enum

./: CMakeLists.txt  README.md
include/zc/: EnumUtils.hpp
test/: Alignment.hpp  AllTestsMain.cpp  CMakeLists.txt  ErrorCodes.hpp  HttpStatus.cpp  HttpStatus.h  Menus.hpp  RouteType.hpp
